# engineer-hiring-tech-exercise

./: .gitignore  Crawler.scala  Crawler.test.scala  HttpClient.scala  Main.scala  NOTES.md  Parser.scala  Parser.test.scala  README.md  Readme.md  adonisrc.ts  build.gradle.kts  build.sbt  docker-compose.yml  package-lock.json  package.json  project.scala  pyproject.toml  pytest.ini  settings.gradle.kts  tasks.py  web-crawler.sh
app/helpers/: utils.ts
app/interfaces/: crawler.interface.ts  webpage_interface.ts
app/models/: crawler.ts  webpage.ts
commands/: crawler.ts
evaluation/: README.md  crawler_test_harness.py
example-html-site/webroot/: index.html
example-html-site/webroot/pages/: nested1.html  nested2.html  page1.html  page2.html
example-html-site/webroot/simple/: p8.html
front-end/: README.md
front-end/dynamic-form/: jest.config.ts  jest.setup.ts  package-lock.json  package.json
golang/: Dockerfile  README.md  docker-compose.yml  go.mod  go.sum
python/: .dockerignore  .gitignore  Dockerfile  PLAN.md  README.md  app.py  build.sbt  config.py  environment.yml  main.py  notes.md  parser.py  pyproject.toml  requirement.txt  requirements-dev.txt  requirements.dev  requirements.test  requirements.txt
python/configuration/: config.py
python/core/: crawler_service.py  http_fetcher.py  link_parser.py
python/crawler/: .gitignore  README.md  cli.py  crawler.py  fetcher.py  main.py  parser.py  pyproject.toml  requirements.txt  traverse.py  url_utils.py  util.py
python/crawler/crawler/: crawler.py  main.py
python/crawler/src/crawler/: __main__.py  crawler.py  main.py  page_worker.py  site_crawler.py  worker.py
python/crawler/tests/: test_crawler.py  test_main.py  test_page_worker.py  test_site_crawler.py  test_worker.py
python/data/: exceptions.py  models.py
python/docs/: PLAN.md  PLAN_v2.md  PROMPTS.md  REVIEWS.md  TASK.md  notes.md  zego_crawler_technical_design_document.md
python/interfaces/: i_crawler_service.py  i_exceptions.py  i_http_fetcher.py  i_link_parser.py  i_validator.py
python/site_crawler/: crawler.py  extractor.py  fetcher.py
python/src/: __main__.py  crawler.py  main.py  parser.py  utils.py
python/src/crawler/: __init__.py  __main__.py  app.py  cli.py  config.py  crawler.py  fetcher.py  models.py  parser.py  renderers.py  robots.py  scheduler.py  url_utils.py  urls.py  worker.py
python/src/main/scala/zego/tech/exercise/: RobotsTxtParser.scala  UriFinder.scala  WebCrawler.scala  main.scala
python/src/test/fixtures/: index.html  page1.html  page2.html
python/src/test/integration/: test_e2e.py
python/src/test/scala/zego/tech/exercise/: RobotsTxtParserSpec.scala  UriFinderSpec.scala  WebCrawlerSpec.scala
python/src/test/unit/: test_html_parser.py  test_http_downloader.py  test_url_crawler.py
python/src/urlcrawler/: __init__.py  html_parser.py  http_downloader.py  url_crawler.py
python/test/: test_configuration.py  test_crawler.py  test_fetcher.py  test_models.py  test_parser.py  test_validator.py
python/tests/: __init__.py  test_app.py  test_cli.py  test_crawler.py  test_crawler_crawl.py  test_extractor.py  test_fetcher.py  test_main.py  test_parser.py  test_renderers.py  test_robots.py  test_scheduler.py  test_traverse.py  test_url_utils.py  test_urls.py  test_utils.py  test_worker.py
python/tests/crawler/: test_fetcher.py  test_parser.py  test_url_utils.py
python/tests/fixtures/: basic.html  malformed.html  mixed.html
python/tests/integration/: test_crawler.py
python/tests/unit/: test_fetcher.py  test_parser.py  test_url_utils.py
python/unit/: tests.py
python/utils/: validator.py
python/web_crawler/: .pre-commit-config.yaml  Dockerfile  Makefile  crawl.py  pyproject.toml
python/web_crawler/tests/: integration_test.py  test_integration.py  test_st_webcrawler.py  test_url.py  test_webcrawler.py
python/web_crawler/web_crawler/: mp_webcrawler.py  mt_webcrawler.py  st_webcrawler.py  url.py  webcrawler.py
python/web_crawler/webcrawler.egg-info/: PKG-INFO  SOURCES.txt
python/webcrawler/webcrawler/: webcrawler.py
python/zego-java-crawler/: README.md  pom.xml
python/zego-java-crawler/src/main/java/com/example/zegocrawler/: SimpleCrawler.java
python/zego-java-crawler/src/test/java/com/example/zegocrawler/: SimpleCrawlerTest.java
src/crawlspace/: __init__.py  __main__.py  _crawler.py  _fetch_url_filter.py  _fetcher.py  _parser.py  schemas.py
tests/: Caddyfile  conftest.py  docker-compose.yaml
tests/bdd/: _given_steps.py  _then_steps.py  _when_steps.py  conftest.py  docker-compose.yaml  test_cli_application.py
tests/console/: crawler.spec.ts
tests/functional/: crawler_e2e.spec.ts
tests/html_fixtures/: 404.html  500.html  empty_page.html  index.html  parse_test.html  report.html
tests/unit/: test_crawler.py  test_fetch_url_filter.py  test_fetcher.py  test_parser.py
web_crawler/: README.md  __init__.py  __main__.py  requirements.txt  web_crawler.py
web_crawler/src/: robots.py  web_crawler.py
web_crawler/tests/: conftest.py  test_links.py  test_live.py  test_options.py  test_robots.py  test_web_crawler.py
(+82 files in other folders)
