[project]
name = "crawlspace"
version = "0.1.0"
description = "Submission for Zego"
authors = [
    {name = "James Hudson",email = "james.hudson@outerbox.co.uk"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx (>=0.28.1,<0.29.0)"
]

[tool.poetry]
packages = [{include = "crawlspace", from = "src"}]


[tool.poetry.group.dev.dependencies]
invoke = "^2.2.0"
pytest = "^8.3.5"
ruff = "^0.11.5"
pyre-check = "^0.9.23"
pytest-bdd = "^8.1.0"
pytest-asyncio = "^0.26.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
