[tool.poetry]
name = "crawler"
version = "0.1.0"
description = ""
authors = ["João Batista <5480371+matosjr@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "crawler", from = "src"}]

[tool.poetry.scripts]
crawler = "crawler.cli:main"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
