[tool.poetry]
name = "crawler"
version = "0.1.0"
description = ""
authors = ["João Batista <5480371+matosjr@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "crawler", from = "src"}]

[tool.poetry.scripts]
crawler = "crawler.cli:main"

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.13.3"
beautifulsoup4 = "^4.14.3"


[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-asyncio = "^1.3.0"
ruff = "^0.15.0"
mypy = "^1.19.1"
black = "^26.1.0"

[tool.ruff]
line-length = 88
target-version = "py310"
select = ["E", "F", "I", "B", "ASYNC"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
